# First_kurs_work-

./: .gitignore  Readmy.md  main.py  pyproject.toml
data/: operations.csv
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utilis.py  test_views.py
